fix: scroll text-editor toolbar rather than wrap

--- a/resources/less/system/_utils.less
+++ b/resources/less/system/_utils.less
@@ -240,7 +240,6 @@
 
 .scrollable {
   overflow: auto;
-  position: relative;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
